feat: simplify company DPP API paths
